@@ -1127,14 +1127,9 @@ else
   AC_DEFINE(BX_FAST_FUNC_CALL, 0)
 fi
 
-if test "$use_smp" = 1 -a "$speedup_handlers_chaining" = 1; then
-  speedup_handlers_chaining=0
-  echo "ERROR: with >1 processor handlers-chaining speedups are not supported yet"
-fi
-
 if test "$bx_debugger" = 1 -a "$speedup_handlers_chaining" = 1; then
   speedup_handlers_chaining=0
-  echo "ERROR: handlers-chaining speedups are not supported with internal debugger yet"
+  echo "ERROR: handlers-chaining speedups are not supported with internal debugger or gdbstub yet"
 fi
 
 if test "$speedup_handlers_chaining" = 1; then
